# audio-dev-plugin-collection

./: Cargo.toml  Makefile.toml  README.md  bundler.toml
plugins/tone-generator/: Cargo.toml  Makefile.toml
plugins/tone-generator/src/: lib.rs
plugins/tone-generator/src/oscillator/: mod.rs
plugins/tone-generator/src/oscillator/wavetable/: mod.rs  noise.rs  saw.rs  sin.rs  square.rs  triangle.rs
plugins/tone-generator/test_files/: tone_generator_test.filtergraph  tone_generator_test_disconnected.filtergraph
plugins/tone-generator/tests/: plot_wavetables.rs
