[package]
name = "tone-generator"
version = "0.1.0"
edition = "2021"
authors = ["Marquess Valdez <marquessavaldez@gmail.com>"]
license = "GPL-3.0-or-later"
description = "A collection of plugins for developing plugins"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nih_plug.workspace = true
once_cell = "1.17.1"
rand = "0.8.5"

[dev-dependencies]
approx = "0.5.1"
float-cmp = "0.9.0"
plotters = "0.3.4"
