[package]
name = "tone-generator"
version = "0.1.0"
edition = "2021"
authors = ["Marquess Valdez <marquessavaldez@gmail.com>"]
license = "GPL-3.0-or-later"
description = "A simple tone generator plugin"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nih_plug.workspace = true
rand = "0.8.5"

[dev-dependencies]
approx = "0.5.1"
float-cmp = "0.9.0"
# At the time of writing, the latest release of plotters on crates.io was broken
# on Rust 1.70. When published, v0.3.5 or greater should work.
plotters = { git = "https://github.com/plotters-rs/plotters", revision = "165b3a3" }
